--- a/app/src/main/res/layout/completed_list.xml
+++ b/app/src/main/res/layout/completed_list.xml
@@ -18,30 +18,32 @@
             android:padding="10sp"
             android:orientation="horizontal"
             android:background="@color/colorPrimaryDark"
-            >
+            android:weightSum="4">
 
             <TextView
                 android:id="@+id/completed_heading_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:text="BUY"
                 android:textAlignment="center"
                 android:background="@color/BUY"
-                android:textColor="@color/BUYcolor"/>
+                android:textColor="@color/BUYcolor"
+                android:layout_weight="0.6"/>
             <TextView
                 android:id="@+id/completed_description"
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:text="BTC-NEO"
                 android:textStyle="bold"
-                android:layout_marginLeft="20dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="150dp"
                 android:text="2017-09-15 09:58"
-                android:textAlignment="center"/>
+                android:textAlignment="textEnd"
+                android:layout_weight="2.4"/>
         </LinearLayout>
 
         <LinearLayout
@@ -49,21 +51,24 @@
             android:layout_height="20dp"
             android:layout_marginTop="50dp"
             android:orientation="horizontal"
-            android:background="@color/colorPrimaryDark">
+            android:background="@color/colorPrimaryDark"
+            android:weightSum="2">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:text="Quantity:18.42074"
-                android:textAlignment="center"
-                android:textColor="@color/colorAccent"/>
+                android:textAlignment="textStart"
+                android:textColor="@color/colorAccent"
+                android:layout_weight="1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:text="Actual Rate:0.00459999"
-                android:textAlignment="center"
-                android:layout_marginLeft="90dp"
-                android:textColor="@color/colorAccent"/>
+                android:textAlignment="textEnd"
+                android:layout_weight="1"
+                android:textColor="@color/colorAccent"
+                android:gravity="end"/>
 
         </LinearLayout>
 
@@ -72,21 +77,23 @@
             android:layout_height="20dp"
             android:layout_marginTop="70dp"
             android:orientation="horizontal"
-            android:background="@color/colorPrimaryDark">
+            android:background="@color/colorPrimaryDark"
+            android:weightSum="2">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:text="Cost:0.08494726"
-                android:textAlignment="center"
-                android:textColor="@color/COSTcolor"/>
+                android:textAlignment="textStart"
+                android:textColor="@color/COSTcolor"
+                android:layout_weight="1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:text="Price Now:0.004945"
-                android:textAlignment="center"
-                android:layout_marginLeft="97.2dp"
-                android:textColor="@color/COSTcolor"/>
+                android:textAlignment="textEnd"
+                android:textColor="@color/COSTcolor"
+                android:layout_weight="1"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
