--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,22 +6,25 @@
     >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:weightSum="2">
 
         <CheckBox
-            android:layout_width="wrap_content"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:text="DEPOSIT"
-            android:textAlignment="center"/>
+            android:textAlignment="textStart"
+            android:layout_weight="1"/>
 
         <CheckBox
-            android:layout_width="wrap_content"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:text="WITHDRAW"
-            android:textAlignment="center"
-            android:layout_marginLeft="210dp"/>
+            android:textAlignment="textStart"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
