--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -16,31 +16,32 @@
             android:padding="10sp"
             android:orientation="horizontal"
             android:background="@color/colorPrimaryDark"
-            >
+            android:weightSum="3">
 
 
 
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2017-07-28"
-            android:textAlignment="center"
-                android:id="@+id/history_heading_text"/>
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:text="2017-07-28"
+                android:textAlignment="center"
+                android:id="@+id/history_heading_text"
+                android:layout_weight="1"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:text="ETH"
                 android:textAlignment="center"
-                android:layout_marginLeft="120dp"
-                android:id="@+id/history_description"/>
+                android:id="@+id/history_description"
+                android:layout_weight="1"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:text="2.4"
                 android:textAlignment="center"
-                android:layout_marginLeft="150dp"/>
+                android:layout_weight="1"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
